--- a/todo
+++ b/todo
@@ -4,11 +4,12 @@ MAJOR ENDPOINTS
 3- order tracking - aliexpress.ds.order.tracking.get
 4- place order - aliexpress.trade.buy.placeorder
 5- Order and pay - aliexpress.ds.order.create
-6- Get category - aliexpress.ds.category.get
 
 MINOR ENDPOINTS
 1- image search - aliexpress.ds.image.search
 2- Restricted names - aliexpress.ds.address.get
 3- Feed list (all of them)
+4- freight calculation - aliexpress.logistics.buyer.freight.calculate -- for buyers
 
 DONE
+6- Get category - aliexpress.ds.category.get
